Fixed z-indexing issue

--- a/Marketplace/marketplace.css
+++ b/Marketplace/marketplace.css
@@ -19,6 +19,7 @@ body {
 *********************************************/
 header:last-of-type {
     margin: 0px 0px 25px 0px;
+    z-index: auto;
 }
 #search-bar {
     background-color: white;
