--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ header {
     box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.4);
     padding: 25px;
     height: 75px;
-    z-index: auto;
+    z-index: 5;
 }
 header {
     margin: 0px;
